--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "moment": "^2.30.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-router-dom": "^7.9.4",
     "styled-components": "^6.1.19"
   },
   "devDependencies": {
